# DeCoSearch

./: .gitignore  README.md  check_gpu.py  env.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.ssh/: known_hosts
Analysis/: compare_two_checkpoints.py
Analysis/FilterBest/: deduplicate_hash.py  fast_eval_no_graph.py  filter_best.py
Analysis/Plots/: new_cluster_rate_plot.py  scaling_plot.py
LRZ/: config.py  enroot_test.err  enroot_test.out  funsearch.py  programs_database.py  temp_005.sbatch
analysis/: README.md  __init__.py  average_registered.py  checkpoint_analyzer.py  plot_evolution.py  write.py
analysis/FilterBest/: best_programs.py  evaluate.py
analysis/Plots/: performance_plot.py  (+2 more)
configs/: config.py  rabbitmq.conf
devcontainer/: Dockerfile.rabbitmq  devcontainer.json
docs/: CLUSTER_SETUP.md  CONFIGURATION.md  DOCKER_SETUP.md  SCALING.md
grid_search/: grid_search.py
implementation/: attach_eval.py  attach_sampler.py  client.py  code_manipulation.py  config.py  evaluator.py  funsearch.py  funsearch.sh  funsearch_e.py  funsearch_gpt.py  funsearch_s.py  gpt.py  grid_search.py  grid_search.sh  llama_grid.py  manager.py  perf_tracker.py  programs_database.py  sampler.py  sandbox.py  scaling_utils.py  sim_test.py  sim_tracker.py  similarity.py  specification.txt  specification_consider_string.txt  specification_medium_descriptive.txt  specification_more_descriptive.txt  specification_without_imports_medium_desc.txt  starcoder.py  visual.py  write.py
sbatch/: cpu_temp_005.sbatch
(+77 files in other folders)
