[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "funsearchmq"
version = "0.1.0"
description = "FunSearchMQ - Distributed implementation of FunSearch using RabbitMQ"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "transformers",
  "openai",
  "aio-pika",
  "yarl",
  "psutil",
  "GPUtil",
  "memory-profiler",
  "cloudpickle",
  "nvidia-ml-py",
  "accelerate",
  "lmdb",
  "python-Levenshtein",
  "tqdm",
  "wandb",
  "matplotlib",
  "pandas",
  "seaborn",
  "tabulate",
  "networkx"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
funsearchmq = "funsearchmq.__main__:main"
